--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
   - "nightly"
-  - "pypy3.5"
 cache: pip
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -13,7 +11,7 @@ before_script:
   - ./cc-test-reporter before-build
 install:
   - pip install -r requirements.txt
-  - pip install coverage requests
+  - pip install coverage requests nose2 nose2[coverage_plugin]
 script:
   - nose2 -vv
 after_success:
