fix e-mail address

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8
 license_files = LICENSE
 author = Piotr Maślanka
-author_email = piotrm@smok.co
+author_email = pmaslanka@smok.co
 description = A library to metric your FastAPI app using Satella
 url = https://github.com/piotrmaslanka/fastapi-satella-metrics
 classifier =
