--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_script:
   - ./cc-test-reporter before-build
 install:
   - pip install -r requirements.txt
-  - pip install coverage requests nose2 nose2[coverage_plugin]
+  - pip install coverage requests nose2
 script:
-  - nose2 -vv
+  - coverage run --concurrency=multiprocessing -m nose2 -vv
 after_success:
   - coverage xml
   - ./cc-test-reporter after-build -t coverage.py --exit-code $TRAVIS_TEST_RESULT
