--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - ./cc-test-reporter before-build
 install:
   - pip install -r requirements.txt
-  - pip install coverage requests nose2 daphne
+  - pip install coverage requests nose2 uvicorn
 script:
   - coverage run -m nose2 -vv
 after_success:
